Updated page Assembly/de

--- a/wiki/de/Assembly.html
+++ b/wiki/de/Assembly.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Assembly/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Assembly&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Assembly.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Assembly (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblage (82% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblaggio (82% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -33,14 +33,11 @@
 </p><p><span id="Constrained_assembly"></span>
 </p>
 <h3><span class="mw-headline" id="Zusammenbau_mit_Randbedingungen">Zusammenbau mit Randbedingungen</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Es kann auch der enthaltene Arbeitsbereich <a href="../de/Assembly_Workbench.html" title="Assembly Workbench/de">Assembly</a> verwendet werden oder entsprechende Addons wie 
+<p>Es kann auch der enthaltene Arbeitsbereich <span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Assembly_Workbench.html" title="Assembly Workbench/de">Assembly</a> verwendet werden oder entsprechende Addons wie 
 <span typeof="mw:File"><a href="../index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="../File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/A2plus_Workbench.html" title="A2plus Workbench/de">A2plus</a>, <span typeof="mw:File"><a href="../index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="../File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Assembly3_Workbench.html" title="Assembly3 Workbench/de">Assembly3</a> oder 
 <span typeof="mw:File"><a href="../index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="../File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Assembly4_Workbench.html" title="Assembly4 Workbench/de">Assembly4</a>. 
 Bitte beachten, dass <a href="../de/Assembly2_Workbench.html" title="Assembly2 Workbench/de">Assembly2</a> nicht gepflegt wird und daher f&uuml;r neue Modelle nicht zu empfehlen ist.
-</p>
-</div>
-<p>Die Arbeitsbereiche zum Erstellen von Baugruppen verwenden Randbedingungen und Ausdr&uuml;cke, um Beziehungen zwischen den Objekten in einem Modell festzulegen und so die Objekte mathematisch an ihren Platz zu binden, z. B. "diese Fl&auml;che sollte an dieser anderen Fl&auml;che haften", "dieser Zylinder sollte konzentrisch zu diesem Kreis sein", "dieser Punkt sollte dieser Kante folgen", usw.
+</p><p>Die Arbeitsbereiche zum Erstellen von Baugruppen verwenden Randbedingungen und Ausdr&uuml;cke, um Beziehungen zwischen den Objekten in einem Modell festzulegen und so die Objekte mathematisch an ihren Platz zu binden, z. B. "diese Fl&auml;che sollte an dieser anderen Fl&auml;che haften", "dieser Zylinder sollte konzentrisch zu diesem Kreis sein", "dieser Punkt sollte dieser Kante folgen", usw.
 </p><p>Dies ist eine erweiterte Anwendung der Software, die normalerweise f&uuml;r komplexemechanischen Systeme eingesetzt wird. Wenn ein <a href="../de/Model.html" title="Model/de">Modell</a> nicht sehr komplex ist, ist die Verwendung eines Arbeitsbereichs zum Erstellen von Baugruppen m&ouml;glicherweise nicht n&ouml;tig.
 </p><p><span id="Notes"></span>
 </p>
@@ -113,33 +110,33 @@ Bitte beachten, dass <a href="../de/Assembly2_Workbench.html" title="Assembly2 W
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114172027
+Cached time: 20260114172139
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.170 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 362/1000000
 Post&#8208;expand include size: 31475/2097152 bytes
 Template argument size: 12339/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1544/5000000 bytes
+Unstrip post&#8208;expand size: 1548/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.690      1 -total
- 39.03%   11.589      1 Template:Std_Base_navi/de
- 27.21%    8.078      3 Template:Navigation_menu_2
- 24.31%    7.219      1 Template:Document_objects_navi/de
- 11.37%    3.376      1 Template:Userdocnavi/de
-  8.25%    2.450      1 Template:Caption
-  7.69%    2.283      1 Template:TOCright
-  6.43%    1.910      1 Template:Button
+100.00%   26.373      1 -total
+ 44.28%   11.679      1 Template:Std_Base_navi/de
+ 32.40%    8.544      3 Template:Navigation_menu_2
+ 23.33%    6.152      1 Template:Document_objects_navi/de
+  9.07%    2.392      1 Template:Caption
+  8.48%    2.237      1 Template:Userdocnavi/de
+  6.22%    1.640      1 Template:Button
+  6.02%    1.588      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199590-0!canonical and timestamp 20260114172027 and revision id 1738460. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199590-0!canonical and timestamp 20260114172139 and revision id 1738462. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
