--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Multi Export/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Multi+Export&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_Multi_Export.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Multi Export (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Multi_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Multi Export (6% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -112,14 +112,12 @@ Macro Multi Export
 <ul><li>FreeCAD 0.21 oder h&ouml;her.</li>
 <li>Objekte mit Festk&ouml;rpern (Part oder PartDesign-K&ouml;rper).</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Die Makrodatei herunterladen: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro</a>.</li>
 <li>Die Datei in das FreeCAD-Makroverzeichnis kopieren:
 <ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
 <li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
 <li>Optional kann das Symbol f&uuml;r die Werkzeugleiste heruntergeladen und im selben Verzeichnis ablegt werden.</li></ol>
-</div>
 <p><span id="Source_Code"></span>
 </p>
 <h2><span class="mw-headline" id="Quellcode">Quellcode</span></h2>
@@ -149,29 +147,29 @@ Macro Multi Export
 <li><a href="../de/Import_Export.html" title="Import Export/de">Import/Export</a> - &Uuml;bersicht &uuml;ber die Import-/Exportformate von FreeCAD.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114150313
+Cached time: 20260114172228
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.045 seconds
-Preprocessor visited node count: 135/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 3255/2097152 bytes
 Template argument size: 1163/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 842/5000000 bytes
+Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.289      1 -total
- 51.53%    3.756      1 Template:Macro
- 24.02%    1.751      3 Template:FileName
- 20.40%    1.487      1 Template:CodeDownload
+100.00%    9.582      1 -total
+ 51.18%    4.904      1 Template:Macro
+ 25.48%    2.442      1 Template:CodeDownload
+ 19.59%    1.877      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114150313 and revision id 1738260. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114172228 and revision id 1738464. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
