Updated page Arch Space/de

--- a/wiki/de/Arch_Space.html
+++ b/wiki/de/Arch_Space.html
@@ -1,12 +1,12 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Arch Space/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Arch+Space&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Arch_Space.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Arch Space (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../es/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Espacio (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
+<li><a href="../es/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Espacio (9% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Arch_Space.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Espace (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="../it/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Spazio (47% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../it/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Spazio (44% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Arch_Space.html" class="mw-pt-progress mw-pt-progress--high" title="Architektura: Przestrze&#324; (97% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Espa&ccedil;o (16% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><a href="../ro/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch: Space/Spa&#539;iu (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="../ro/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch: Space/Spa&#539;iu (9% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Space (3% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/Arch_Space.html" class="mw-pt-progress mw-pt-progress--low" title="Architektura Prostor (9% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Arch_Space.html" class="mw-pt-progress mw-pt-progress--med" title="Arch &#1055;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086; (19% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -96,7 +96,9 @@
 <p><span id="Limitations"></span>
 </p>
 <h3><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h3>
-<ul><li>Die Grenzeigenschaften k&ouml;nnen momentan nicht &uuml;ber die GUI bearbeitet werden.</li>
+<ul><li>Nicht konvexe Grundrisse werden nicht unterst&uuml;tzt. (<a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/issues/6091">Issue #6091</a>)</li>
+<li>Volumenabz&uuml;ge werden nicht unterst&uuml;tzt. (<a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/issues/24579">Issue #24579 und Behelfsl&ouml;sung</a>).</li>
+<li>Die Eigenschaften der Grenzen k&ouml;nnen derzeit nicht &uuml;ber die grafische Benutzeroberfl&auml;che bearbeitet werden.</li>
 <li>Siehe die <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=9&amp;t=4275">Forumsank&uuml;ndigung</a>.</li></ul>
 <p><span id="Properties"></span>
 </p>
@@ -238,35 +240,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251018111507
+Cached time: 20260114172657
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.166 seconds
-Real time usage: 0.253 seconds
+CPU time usage: 0.128 seconds
+Real time usage: 0.193 seconds
 Preprocessor visited node count: 1534/1000000
 Post&#8208;expand include size: 43693/2097152 bytes
 Template argument size: 14355/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7361/5000000 bytes
+Unstrip post&#8208;expand size: 7359/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.092      1 -total
- 22.78%   14.144      1 Template:BIM_Tools_navi/de
- 22.07%   13.704     18 Template:PropertyData/de
- 19.70%   12.233     28 Template:Variable
- 16.61%   10.313      2 Template:Navigation_menu_2
- 14.70%    9.126     10 Template:PropertyView/de
-  6.88%    4.274      1 Template:Userdocnavi/de
-  5.53%    3.436      1 Template:GuiCommand/de
-  4.67%    2.900      2 Template:Docnav/de
-  4.52%    2.807      4 Template:Code
+100.00%   50.318      1 -total
+ 21.01%   10.574      1 Template:BIM_Tools_navi/de
+ 18.11%    9.112     28 Template:Variable
+ 17.14%    8.626     18 Template:PropertyData/de
+ 12.36%    6.219      2 Template:Navigation_menu_2
+ 12.13%    6.104     10 Template:PropertyView/de
+  8.16%    4.104      1 Template:Userdocnavi/de
+  7.49%    3.771      1 Template:GuiCommand/de
+  6.07%    3.054      2 Template:Docnav/de
+  5.17%    2.604      2 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:34155-0!canonical and timestamp 20251018111507 and revision id 1666256. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:34155-0!canonical and timestamp 20260114172657 and revision id 1738466. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
