--- a/wiki/de/Arch_Window.html
+++ b/wiki/de/Arch_Window.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Arch Window/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Arch+Window&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Arch_Window.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Arch Window (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Arch Ventana (26% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Arch_Window.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Fen&ecirc;tre (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -101,17 +101,14 @@
 </p><p><span id="Creating_a_custom_window"></span>
 </p>
 <h3><span class="mw-headline" id="Ein_individuelles_Fenster_erstellen">Ein individuelles Fenster erstellen</span></h3>
-<div class="mw-translate-fuzzy">
-<ol><li>Wahlweise eine Fl&auml;che des Arch-Objekts ausw&auml;hlen, wo das Fenster eingef&uuml;gt werden soll.</li>
-<li>Zum Arbeitsbereich <a href="../de/Sketcher_Workbench.html" title="Sketcher Workbench/de">Sketcher</a> wechseln.</li>
-<li>Eine neue Skizze erstellen.</li>
-<li>Einen oder mehrere geschlossene Linienz&uuml;ge (Schleifen) zeichnen. Man sollte genau auf die Auswahlreihenfolge dieser Schleifen achten, die Nummerierung von Linienz&uuml;gen im <a href="../de/Task_Panel.html" title="Task Panel/de">Aufgaben-Fenster</a> ("Window elements") h&auml;ngt davon ab.</li>
+<ol><li>Wahlweise eine Fl&auml;che des Arch-Objekts ausw&auml;hlen, in die das Fenster eingef&uuml;gt werden soll.</li>
+<li>Eine neue Skizze mit dem Befehl <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Sketch.svg&amp;filetimestamp=20240608153905&amp;.html" class="mw-file-description"><img src="../File/BIM_Sketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/BIM_Sketch.html" title="BIM Sketch/de">Neue Skizze</a></span> erstellen.</li>
+<li>F&uuml;r die richtige Positionierung sollte die untere linke Ecke des Fensters am Ursprung der Skizze liegen.</li>
+<li>Einen oder mehrere geschlossene Linienz&uuml;ge (Schleifen) zeichnen. Genau auf die Reihenfolge achten, in der diese Schleifen erstellt werden, da die Nummerierung der &bdquo;Linienz&uuml;ge&rdquo; im <a href="../de/Task_Panel.html" title="Task Panel/de">Aufgaben-Fenster</a> (&bdquo;Fensterelemente&rdquo;) davon abh&auml;ngt.</li>
 <li>Die Skizze schlie&szlig;en.</li>
-<li>Zur&uuml;ck zum Arbeitsbereich <a href="../de/BIM_Workbench.html" title="BIM Workbench/de">BIM</a> wechseln.</li>
-<li>Das Werkzeug wie oben beschrieben aufrufen.</li>
-<li>Um die Fensterkomponenten und verschiedene Eigenschaften anzupassen, wird das <a href="../de/Task_Panel.html" title="Task Panel/de">Aufgaben-Fenster</a> durch Doppelklick auf das erstellte Objekt in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> ge&ouml;ffnet.</li>
-<li>Es ist zu beachten, dass, da Komponenten die einer drehbaren Komponente folgen auch drehbar sind, alle unbeweglichen Komponenten wie die &auml;u&szlig;eren Rahmen und fest verbaute Glasscheiben vor den drehbaren Komponenten festgelegt werden m&uuml;ssen. Und eine Glasscheibe in einem drehbaren Rahmen muss nach diesem Rahmen und vor allen weiteren Komponenten festgelegt werden</li></ol>
-</div>
+<li>Das Werkzeug wie oben beschrieben, mit der ausgew&auml;hlten Skizze aufrufen.</li>
+<li>Um die Fensterkomponenten und verschiedene Eigenschaften anzupassen, das <a href="../de/Task_Panel.html" title="Task Panel/de">Aufgaben-Fenster</a> Fenster durch Doppelklicken auf das erstellte Objekt in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> aufrufen.</li>
+<li>Es muss beachtet werden, dass alle festen Komponenten, wie Au&szlig;enrahmen und feste Glasplatten, vor allen schwenkbaren Komponenten definiert werden m&uuml;ssen, da auch die Komponenten, die auf eine schwenkbare Komponente folgen, schwenkbar sind. Eine Glasplatte in einem schwenkbaren Rahmen muss nach diesem Rahmen und vor allen anderen schwenkbaren Komponenten definiert werden.</li></ol>
 <p><span id="Presets"></span>
 </p>
 <h2><span class="mw-headline" id="Voreinstellungen">Voreinstellungen</span></h2>
@@ -341,35 +338,35 @@ Die Komponenten besitzen folgende Eigenschaften:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114152501
+Cached time: 20260114175654
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.248 seconds
-Real time usage: 0.647 seconds
-Preprocessor visited node count: 1537/1000000
-Post&#8208;expand include size: 41817/2097152 bytes
-Template argument size: 14071/2097152 bytes
+CPU time usage: 0.175 seconds
+Real time usage: 0.239 seconds
+Preprocessor visited node count: 1541/1000000
+Post&#8208;expand include size: 42205/2097152 bytes
+Template argument size: 14130/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 13488/5000000 bytes
+Unstrip post&#8208;expand size: 13492/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  324.564      1 -total
-  9.63%   31.244      1 Template:BIM_Tools_navi/de
-  6.28%   20.384     22 Template:PropertyData/de
-  5.00%   16.226      1 Template:GuiCommand/de
-  4.15%   13.455     11 Template:FileName
-  3.75%   12.168      2 Template:Navigation_menu_2
-  3.74%   12.132     22 Template:Variable
-  3.01%    9.761      1 Template:Userdocnavi/de
-  2.84%    9.203      1 Template:TitleProperty
-  2.82%    9.152      2 Template:Value
+100.00%   89.007      1 -total
+ 12.38%   11.016     22 Template:PropertyData/de
+  9.26%    8.241      1 Template:BIM_Tools_navi/de
+  6.44%    5.731     22 Template:Variable
+  5.33%    4.747      2 Template:Navigation_menu_2
+  5.24%    4.668      1 Template:GuiCommand/de
+  4.81%    4.278      1 Template:Userdocnavi/de
+  4.05%    3.606      2 Template:Docnav/de
+  3.50%    3.112      2 Template:Version/de
+  3.27%    2.906      2 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:8811-0!canonical and timestamp 20260114152500 and revision id 1738314. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:8811-0!canonical and timestamp 20260114175654 and revision id 1738468. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
