--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -9,11 +9,8 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD unterst&
 </div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Alle Bilder auf dieser Seite m&uuml;ssen die Endung <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span> verwenden.</div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>FreeCAD 1.2</b> was released on <b>D Month Year</b>, get it from the <a href="../Download.html" title="Download">Download</a> page. This page lists all new features and changes.
-</p>
-</div>
-<p>Fr&uuml;here FreeCAD-Versionshinweise k&ouml;nnen unter <a href="../de/Feature_list.html#Release_notes" title="Feature list/de">Funktionsliste</a> gefunden werden.
+<p><b>FreeCAD 1.1</b> wurde am <b>T Monat Jahr</b> ver&ouml;ffentlicht, es kann von der <a href="../de/Download.html" title="Download/de">Download</a>-Seite heruntergeladen werden. Diese Seite listet alle Neuerungen und &Auml;nderungen auf.
+</p><p>Fr&uuml;here FreeCAD-Versionshinweise k&ouml;nnen unter <a href="../de/Feature_list.html#Release_notes" title="Feature list/de">Funktionsliste</a> gefunden werden.
 </p><p>Platzhalter f&uuml;r ein auff&auml;lliges Bild, das von den Admins im <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">user showcases forum</a> ausgesucht wird.
 </p><p><span id="General"></span>
 </p>
@@ -181,13 +178,13 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD unterst&
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114171423
+Cached time: 20260114175739
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.063 seconds
-Preprocessor visited node count: 248/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.059 seconds
+Preprocessor visited node count: 247/1000000
 Post&#8208;expand include size: 1406/2097152 bytes
 Template argument size: 500/2097152 bytes
 Highest expansion depth: 5/100
@@ -197,14 +194,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.605      1 -total
- 46.19%    2.127      2 Template:Message
- 29.44%    1.356      1 Template:VeryImportantMessage
- 20.74%    0.955      1 Template:TOCright
- 19.33%    0.890      1 Template:FileName
+100.00%    6.463      1 -total
+ 49.31%    3.187      2 Template:Message
+ 29.48%    1.905      1 Template:VeryImportantMessage
+ 20.33%    1.314      1 Template:FileName
+ 17.75%    1.147      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114171423 and revision id 1738456. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114175739 and revision id 1738470. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
