Created page with "* Die Last der [[Image:FEM_ConstraintElectricChargeDensity.svg|24px]] [[FEM_ElectricChargeDensity/de|Elektrische Ladungsdichte]] verfügt nun im Modus ''Total Source'' über ein Kontrollkästchen ''Concentrated'', um mit CalculiX Konzentrat anstelle von verteilter Last zu verwenden (wodurch sie auch auf Kanten und Eckpunkte anwendbar ist). [https://github.com/FreeCAD/FreeCAD/pull/25237 Pull-Request #25237] * Die [[Image:FEM_ResultShow.svg|24px]] FEM_ResultShow/de|FEM-E..."

--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.2&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 ist in Entwicklung, es steht noch kein Ver&ouml;ffentlichungstermin fest.</div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
@@ -89,11 +89,9 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD unterst&
 <p><span id="Further_FEM_improvements"></span>
 </p>
 <h3><span class="mw-headline" id="Weitere_FEM-Verbesserungen">Weitere FEM-Verbesserungen</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity">Electric Charge Density</a> load now has a <i>Concentrated</i> checkbox in the <i>Total Source</i> mode to use concentrate instead of distributed load (making it also applicable to edges and vertices) with CalculiX. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull request #25237</a></li>
-<li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="../File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ResultShow.html" title="FEM ResultShow">FEM results objects</a> now support the animation of half cycles in addition to reversed full cycles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
-<li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint">Section Print</a> feature now supports 2D models and electric flux in electrostatic analyses. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull request #25081</a></li></ul>
-</div>
+<ul><li>Die Last der <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity/de">Elektrische Ladungsdichte</a> verf&uuml;gt nun im Modus <i>Total Source</i> &uuml;ber ein Kontrollk&auml;stchen <i>Concentrated</i>, um mit CalculiX Konzentrat anstelle von verteilter Last zu verwenden (wodurch sie auch auf Kanten und Eckpunkte anwendbar ist). <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull-Request #25237</a></li>
+<li>Die <span typeof="mw:File"><a href="../index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="../File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/FEM_ResultShow.html" title="FEM ResultShow/de">FEM-Ergebnisobjekte</a> unterst&uuml;tzen nun zus&auml;tzlich zu umgekehrten Vollzyklen auch die Animation von Halbzyklen. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull-Request #24129</a></li>
+<li>Die <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint/de">Querschnitt-Druckfunktion</a> unterst&uuml;tzt nun 2D-Modelle und den elektrischen Fluss in elektrostatischen Analysen. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull-Request #25081</a></li></ul>
 <p><span id="Inspection_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Inspection">Arbeitsbereich Inspection</span></h2>
@@ -178,30 +176,30 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD unterst&
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114175739
+Cached time: 20260114180136
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 247/1000000
+CPU time usage: 0.046 seconds
+Real time usage: 0.073 seconds
+Preprocessor visited node count: 246/1000000
 Post&#8208;expand include size: 1406/2097152 bytes
 Template argument size: 500/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 677/5000000 bytes
+Unstrip post&#8208;expand size: 681/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.463      1 -total
- 49.31%    3.187      2 Template:Message
- 29.48%    1.905      1 Template:VeryImportantMessage
- 20.33%    1.314      1 Template:FileName
- 17.75%    1.147      1 Template:TOCright
+100.00%   12.266      1 -total
+ 45.99%    5.641      2 Template:Message
+ 28.89%    3.544      1 Template:VeryImportantMessage
+ 21.84%    2.679      1 Template:TOCright
+ 19.49%    2.391      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114175739 and revision id 1738470. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114180136 and revision id 1738472. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
