--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -138,30 +138,27 @@ Arbeits-Funktionen
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Base Point</span>&nbsp;: Create Base Point of all selected Object(s).</li></ul>
 </td></tr></tbody></table>
 <p><br>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Axis Tab</b>
+<b>Reiter Axis</b> (Achsen)
 </p>
 <table>
 <tbody><tr>
 <td><figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_04.png&amp;filetimestamp=20141225151924&amp;.html" class="mw-file-description"><img src="../File/Macro_WorkFeatures_04.png" decoding="async" width="200" height="336" class="mw-file-element" data-file-width="350" data-file-height="588"></a><figcaption></figcaption></figure>
 </td>
 <td>
-<ul><li><b>Axis Tab</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) X, Y, Z Axes</span>&nbsp;: Create 3 Axes at center location of all selected Object(s).</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Two Points Axis</span>&nbsp;: Create an Axis crossing 2 Points.</li>
-<li><b>SpinBox</b>&nbsp;: enter the displacement value</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder(s) Axis</span>&nbsp;: Create the Axis of a Cylinder.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Line,Line)</span>&nbsp;: Create an Axis between 2 Axes.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane(s) Axes</span>&nbsp;: Create 2 Perpendicular Axes at center location of a Plane.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Point,Axis)</span>&nbsp;: Create an Axis parallel to an Axis and crossing a Point.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Axis,Point)</span>&nbsp;: Create an Axis perpendicular to an Axis and crossing a Point.</li>
-<li><b>SpinBox</b>&nbsp;: enter the displacement value</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Axis)</span>&nbsp;: Create an Axis on a Plane by projection from another Axis.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Plane)</span>&nbsp;: Create an Axis by intersect of 2 Planes.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Base Axis</span>&nbsp;: Create 3 Axes at Base location of all selected Object(s).</li></ul>
+<ul><li><b>Reiter Axis</b></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) X, Y, Z Axes</span>&nbsp;: Drei Achsen an der Mitte aller ausgew&auml;hlten Objekte erstellen.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Two Points Axis</span>&nbsp;: Eine Achse, die zwei Punkte kreuzt erstellen.</li>
+<li><b>SpinBox</b>&nbsp;: Den Verdr&auml;ngungswert eingeben</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder(s) Axis</span>&nbsp;: Die Achse eines Zylinders erstellen.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Line,Line)</span>&nbsp;: Die Achse zwischen zwei Achsen erstellen.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane(s) Axes</span>&nbsp;: Zwei senkrechte Achsen an der Mitte einer Ebene erstellen.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Point,Axis)</span>&nbsp;: Eine Achse parallel zu einer Achse erstellen, die einen Punkt schneidet.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Axis,Point)</span>&nbsp;: Eine Achse erstellen, die senkrecht zu einer Achse steht und einen Punkt schneidet.</li>
+<li><b>SpinBox</b>&nbsp;: Den Verdr&auml;ngungswert eingeben</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Axis)</span>&nbsp;: Eine Achse auf einer Ebene durch Projektion von einer anderen Achse erstellen.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Plane)</span>&nbsp;: Eine Achse durch den Schnittpunkt zweier Ebenen erstellen.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Base Axis</span>&nbsp;: Drei Achsen an der Basisposition aller ausgew&auml;hlten Objekte erstellen.</li></ul>
 </td></tr></tbody></table>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Plane Tab</b>
 </p>
@@ -454,13 +451,13 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260110082626
+Cached time: 20260114180522
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.166 seconds
-Real time usage: 0.232 seconds
-Preprocessor visited node count: 675/1000000
+CPU time usage: 0.165 seconds
+Real time usage: 0.392 seconds
+Preprocessor visited node count: 674/1000000
 Post&#8208;expand include size: 25853/2097152 bytes
 Template argument size: 3266/2097152 bytes
 Highest expansion depth: 5/100
@@ -470,18 +467,18 @@ Unstrip post&#8208;expand size: 21307/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  112.240      1 -total
-  3.56%    3.995      1 Template:Macro/de
-  3.36%    3.770      1 Template:Userdocnavi/de
-  3.08%    3.455     54 Template:KEY
-  1.93%    2.167     11 Template:Clear
-  1.76%    1.975      1 Template:Caption
-  1.67%    1.874      1 Template:Button
-  1.56%    1.749      1 Template:Navigation_menu_2
-  1.52%    1.711      1 Template:MenuCommand
+100.00%  258.558      1 -total
+  2.46%    6.362     54 Template:KEY
+  2.39%    6.191      1 Template:Caption
+  2.37%    6.135      1 Template:Macro/de
+  2.09%    5.408      1 Template:Userdocnavi/de
+  1.48%    3.829     11 Template:Clear
+  1.24%    3.208      1 Template:MenuCommand
+  0.94%    2.429      1 Template:Navigation_menu_2
+  0.76%    1.957      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260110082626 and revision id 1730520. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260114180522 and revision id 1738474. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
