--- a/wiki/pl/Arch_Window.html
+++ b/wiki/pl/Arch_Window.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Arch Window/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Arch+Window&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Arch_Window.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Fenster (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Arch_Window.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Fenster (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Arch_Window.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Arch Window (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Arch Ventana (26% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Arch_Window.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Fen&ecirc;tre (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Finestra (68% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Janela (16% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Arch_Window.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Fereastr&#259; (21% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Arch_Window.html" class="mw-pt-progress mw-pt-progress--low" title="Arch Window (4% translated)" lang="sv" dir="ltr">svenska</a></li>
@@ -102,17 +102,14 @@
 </p><p><span id="Creating_a_custom_window"></span>
 </p>
 <h3><span id="Tworzenie_okna_u.C5.BCytkownika"></span><span class="mw-headline" id="Tworzenie_okna_u&#380;ytkownika">Tworzenie okna u&#380;ytkownika</span></h3>
-<div class="mw-translate-fuzzy">
-<ol><li>Opcjonalnie, wybierz powierzchni&#281; na obiekcie Architektury, gdzie chcesz umie&#347;ci&#263; okno.</li>
-<li>Prze&#322;&#261;cz si&#281; do &#347;rodowiska pracy <a href="../pl/Sketcher_Workbench.html" title="Sketcher Workbench/pl">Szkicownik</a>.</li>
-<li>Utw&oacute;rz nowy szkic.</li>
-<li>Narysuj jedn&#261; lub wi&#281;cej zamkni&#281;tych polilinii <i>(p&#281;tli)</i>. Zwr&oacute;&#263; szczeg&oacute;ln&#261; uwag&#281; na kolejno&#347;&#263; tworzenia tych p&#281;tli, od tego zale&#380;y numeracja polilinii w <a href="../pl/Task_panel.html" class="mw-redirect" title="Task panel/pl">panelu zada&#324;</a> <i>("Elementy okna")</i>.</li>
+<ol><li>Opcjonalnie zaznacz &#347;cian&#281; obiektu Architektury, w kt&oacute;rej ma zosta&#263; umieszczone okno.</li>
+<li>Utw&oacute;rz nowy szkic za pomoc&#261; polecenia <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Sketch.svg&amp;filetimestamp=20240608153905&amp;.html" class="mw-file-description"><img src="../File/BIM_Sketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Sketch.html" title="BIM Sketch/pl">Nowy szkic</a></span>.</li>
+<li>Dla prawid&#322;owego umiejscowienia lewy dolny naro&#380;nik okna powinien znajdowa&#263; si&#281; w punkcie pocz&#261;tkowym szkicu.</li>
+<li>Narysuj jeden lub wi&#281;cej zamkni&#281;tych obrys&oacute;w (p&#281;tli). Zwr&oacute;&#263; szczeg&oacute;ln&#261; uwag&#281; na kolejno&#347;&#263; tworzenia tych p&#281;tli &mdash; numeracja "polilinii" w <a href="../pl/Task_Panel.html" title="Task Panel/pl">panelu zada&#324;</a> ("Elementy okna") zale&#380;y od tej kolejno&#347;ci.</li>
 <li>Zamknij szkic.</li>
-<li>Wr&oacute;&#263; do &#347;rodowiska pracy <a href="../pl/BIM_Workbench.html" title="BIM Workbench/pl">BIM</a>.</li>
-<li>Kliknij przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Arch_Window.svg&amp;filetimestamp=20250123011811&amp;.html" class="mw-file-description"><img src="../File/Arch_Window.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Okno</a></span>, lub wci&#347;nij klawisze <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">W</span> a nast&#281;pnie <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">I</span>.</li>
-<li>Aby dostosowa&#263; sk&#322;adniki okna oraz r&oacute;&#380;ne w&#322;a&#347;ciwo&#347;ci, przejd&#378; do panelu zada&#324; dla okna, klikaj&#261;c dwukrotnie na utworzony obiekt w <a href="../pl/Tree_view.html" class="mw-redirect" title="Tree view/pl">widoku drzewa</a>.</li>
-<li>Nale&#380;y pami&#281;ta&#263;, &#380;e poniewa&#380; komponenty nast&#281;puj&#261;ce po komponencie zawiasowym r&oacute;wnie&#380; b&#281;d&#261; mia&#322;y zawiasy, wszystkie komponenty sta&#322;e, takie jak ramy zewn&#281;trzne i nieruchome panele szklane, musz&#261; zosta&#263; zdefiniowane przed komponentami zawiasowymi. Panel szklany w ramie zawiasowej nale&#380;y zdefiniowa&#263; za t&#261; ram&#261; i przed innymi elementami zawiasowymi.</li></ol>
-</div>
+<li>Wywo&#322;aj narz&#281;dzie zgodnie z powy&#380;szym opisem, maj&#261;c zaznaczony szkic.</li>
+<li>Aby dostosowa&#263; komponenty okna i r&oacute;&#380;ne w&#322;a&#347;ciwo&#347;ci, przejd&#378; do <a href="../pl/Task_Panel.html" title="Task Panel/pl">panelu zada&#324;</a> okna, dwukrotnie klikaj&#261;c utworzony obiekt w <a href="../pl/Tree_View.html" title="Tree View/pl">Widoku drzewa</a>.</li>
+<li>Zwr&oacute;&#263; uwag&#281;, &#380;e poniewa&#380; komponenty nast&#281;puj&#261;ce po komponencie zawiasowym r&oacute;wnie&#380; b&#281;d&#261; elementami zawiasu, wszystkie komponenty sta&#322;e &mdash; takie jak ramy zewn&#281;trzne i sta&#322;e panele szklane &mdash; musz&#261; by&#263; zdefiniowane przed jakimikolwiek komponentami zawiasu. Ponadto panel szklany w ramie zawiasowej musi zosta&#263; zdefiniowany po tej ramie i przed innymi komponentami zawiasowymi.</li></ol>
 <p><span id="Presets"></span>
 </p>
 <h2><span id="Nastawy_wst.C4.99pne"></span><span class="mw-headline" id="Nastawy_wst&#281;pne">Nastawy wst&#281;pne</span></h2>
@@ -341,35 +338,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114152455
+Cached time: 20260114180634
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.191 seconds
-Real time usage: 0.583 seconds
-Preprocessor visited node count: 1869/1000000
-Post&#8208;expand include size: 42579/2097152 bytes
-Template argument size: 13854/2097152 bytes
+CPU time usage: 0.179 seconds
+Real time usage: 0.229 seconds
+Preprocessor visited node count: 1853/1000000
+Post&#8208;expand include size: 41985/2097152 bytes
+Template argument size: 13856/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 13475/5000000 bytes
+Unstrip post&#8208;expand size: 13484/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  173.198      1 -total
- 24.32%   42.119      1 Template:BIM_Tools_navi/pl
- 14.13%   24.481      2 Template:Navigation_menu_2
- 10.04%   17.397      1 Template:TitleProperty
-  8.98%   15.558      1 Template:GuiCommand/pl
-  7.10%   12.300     22 Template:PropertyData
-  5.01%    8.673     22 Template:Variable
-  3.07%    5.315      7 Template:KEY
-  2.66%    4.602      2 Template:Docnav/pl
-  2.59%    4.485      1 Template:Userdocnavi/pl
+100.00%   93.371      1 -total
+ 14.73%   13.749     22 Template:PropertyData
+ 10.71%   10.002     22 Template:Variable
+  9.56%    8.924      1 Template:BIM_Tools_navi/pl
+  5.12%    4.784      2 Template:Navigation_menu_2
+  4.27%    3.987      2 Template:Version/pl
+  4.20%    3.920      2 Template:Value
+  3.53%    3.298      4 Template:Code
+  3.50%    3.266      1 Template:GuiCommand/pl
+  3.44%    3.215      1 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:241798-0!canonical and timestamp 20260114152454 and revision id 1738311. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:241798-0!canonical and timestamp 20260114180633 and revision id 1738476. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
