Updated page Assembly/pl

--- a/wiki/pl/Assembly.html
+++ b/wiki/pl/Assembly.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Assembly/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Assembly&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Zusammenbau (82% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Zusammenbau (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Assembly.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Assembly (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblage (82% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Assembly.html" class="mw-pt-progress mw-pt-progress--high" title="Assemblaggio (82% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -23,14 +23,11 @@
 </p>
 <h3><span id="Monta.C5.BC_manualny"></span><span class="mw-headline" id="Monta&#380;_manualny">Monta&#380; manualny</span></h3>
 <p>Og&oacute;lnie rzecz bior&#261;c, nie potrzebujesz specjalnych narz&#281;dzi do tworzenia z&#322;o&#380;e&#324;, wystarczy, &#380;e b&#281;dziesz mia&#322; wiele r&oacute;&#380;nych <a href="../pl/Body.html" title="Body/pl">Zawarto&#347;ci</a> pouk&#322;adanych w okre&#347;lony spos&oacute;b.
+</p><p>Aby ustawi&#263; cia&#322;a tam, gdzie chcesz, mo&#380;esz
 </p>
-<div class="mw-translate-fuzzy">
-<p>Aby ustawi&#263; cia&#322;a tam, gdzie chcesz, mo&#380;esz
-</p>
-<ul><li>u&#380;y&#263; narz&#281;dzia <a href="../pl/Std_TransformManip.html" title="Std TransformManip/pl">Przemieszczenie</a>,</li>
+<ul><li>u&#380;y&#263; narz&#281;dzia <span typeof="mw:File"><a href="../index.php?title=Std_TransformManip.svg&amp;filetimestamp=20240411193912&amp;.html" class="mw-file-description"><img src="../File/Std_TransformManip.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><a href="../pl/Std_TransformManip.html" title="Std TransformManip/pl">Przemieszczenie</a>,</li>
 <li>u&#380;y&#263; narz&#281;dzia <span typeof="mw:File"><a href="../index.php?title=Std_Placement.svg&amp;filetimestamp=20200107104731&amp;.html" class="mw-file-description"><img src="../File/Std_Placement.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Std_Placement.html" title="Std Placement/pl">Umiejscowienie</a> okna dialogowego, lub.</li>
-<li>zmodyfikowa&#263; w&#322;a&#347;ciwo&#347;&#263; <a href="../pl/Placement.html" title="Placement/pl">Umiejscowienie</a> bezpo&#347;rednio w <a href="../pl/Property_editor.html" class="mw-redirect" title="Property editor/pl">edytorze w&#322;a&#347;ciwo&#347;ci</a>.</li></ul>
-</div>
+<li>zmodyfikowa&#263; w&#322;a&#347;ciwo&#347;&#263; <a href="../pl/Placement.html" title="Placement/pl">Umiejscowienie</a> bezpo&#347;rednio w <a href="../pl/Property_View.html" title="Property View/pl">Widoku w&#322;a&#347;ciwo&#347;ci</a>.</li></ul>
 <div class="mw-translate-fuzzy">
 <p>Mo&#380;esz u&#380;y&#263; jednego z pseudo-monta&#380;y <a href="../pl/External_workbenches.html" title="External workbenches/pl">&#347;rodowisk zewn&#281;trznych</a>, takich jak Lattice2, Manipulator, Part-o-magic lub WorkFeature, aby pom&oacute;c Ci znale&#378;&#263; przeci&#281;cia, zmierzy&#263; odleg&#322;o&#347;ci i rozmie&#347;ci&#263; obiekty w po&#380;&#261;dany spos&oacute;b.
 </p>
@@ -111,33 +108,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114150337
+Cached time: 20260114180901
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.115 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.193 seconds
 Preprocessor visited node count: 117/1000000
 Post&#8208;expand include size: 29479/2097152 bytes
 Template argument size: 11701/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1545/5000000 bytes
+Unstrip post&#8208;expand size: 1550/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.096      1 -total
- 38.08%    9.176      1 Template:Std_Base_navi/pl
- 17.91%    4.315      1 Template:Userdocnavi/pl
- 13.89%    3.346      1 Template:Document_objects_navi/pl
- 13.00%    3.133      3 Template:Navigation_menu_2
- 10.64%    2.564      1 Template:Button
- 10.55%    2.543      1 Template:Caption
-  6.57%    1.584      1 Template:TOCright
+100.00%   19.237      1 -total
+ 41.12%    7.910      1 Template:Std_Base_navi/pl
+ 18.80%    3.617      1 Template:Document_objects_navi/pl
+ 16.17%    3.110      1 Template:Userdocnavi/pl
+ 12.95%    2.492      3 Template:Navigation_menu_2
+  8.06%    1.550      1 Template:TOCright
+  7.22%    1.389      1 Template:Caption
+  6.18%    1.189      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236747-0!canonical and timestamp 20260114150337 and revision id 1738271. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236747-0!canonical and timestamp 20260114180900 and revision id 1738480. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
