Updated page Assembly/pl

--- a/wiki/pl/Assembly.html
+++ b/wiki/pl/Assembly.html
@@ -28,11 +28,8 @@
 <ul><li>u&#380;y&#263; narz&#281;dzia <span typeof="mw:File"><a href="../index.php?title=Std_TransformManip.svg&amp;filetimestamp=20240411193912&amp;.html" class="mw-file-description"><img src="../File/Std_TransformManip.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><a href="../pl/Std_TransformManip.html" title="Std TransformManip/pl">Przemieszczenie</a>,</li>
 <li>u&#380;y&#263; narz&#281;dzia <span typeof="mw:File"><a href="../index.php?title=Std_Placement.svg&amp;filetimestamp=20200107104731&amp;.html" class="mw-file-description"><img src="../File/Std_Placement.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Std_Placement.html" title="Std Placement/pl">Umiejscowienie</a> okna dialogowego, lub.</li>
 <li>zmodyfikowa&#263; w&#322;a&#347;ciwo&#347;&#263; <a href="../pl/Placement.html" title="Placement/pl">Umiejscowienie</a> bezpo&#347;rednio w <a href="../pl/Property_View.html" title="Property View/pl">Widoku w&#322;a&#347;ciwo&#347;ci</a>.</li></ul>
-<div class="mw-translate-fuzzy">
-<p>Mo&#380;esz u&#380;y&#263; jednego z pseudo-monta&#380;y <a href="../pl/External_workbenches.html" title="External workbenches/pl">&#347;rodowisk zewn&#281;trznych</a>, takich jak Lattice2, Manipulator, Part-o-magic lub WorkFeature, aby pom&oacute;c Ci znale&#378;&#263; przeci&#281;cia, zmierzy&#263; odleg&#322;o&#347;ci i rozmie&#347;ci&#263; obiekty w po&#380;&#261;dany spos&oacute;b.
-</p>
-</div>
-<p>Og&oacute;lnie rzecz bior&#261;c, obiekt <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Std_Part.html" title="Std Part/pl">Cz&#281;&#347;&#263;</a></span> zosta&#322; zaprojektowany tak, aby s&#322;u&#380;y&#322; jako podstawowy budulec do tworzenia z&#322;o&#380;e&#324;. Obiekt ten s&#322;u&#380;y do grupowania kilku <a href="../pl/Body.html" title="Body/pl">Zawarto&#347;ci</a> i przenoszenia ich razem jako jednostki, czyli jako podzespo&#322;u. Nast&#281;pnie ten podzesp&oacute;&#322; mo&#380;e by&#263; umieszczony obok lub u&#380;yty wewn&#261;trz innych podzespo&#322;&oacute;w, aby stworzy&#263; ostateczne z&#322;o&#380;enie.
+<p>Mo&#380;esz u&#380;y&#263; jednego z pseudo-z&#322;o&#380;eniowych <a href="../pl/External_workbenches.html" title="External workbenches/pl">zewn&#281;trznych &#347;rodowisk pracy</a>, takich jak <span typeof="mw:File"><a href="../index.php?title=Lattice2_workbench_icon.svg&amp;filetimestamp=20160611191139&amp;.html" class="mw-file-description"><img src="../File/Lattice2_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Lattice2_Workbench.html" title="Lattice2 Workbench/pl">Lattice2</a>, <span typeof="mw:File"><a href="../index.php?title=Manipulator_workbench_icon.svg&amp;filetimestamp=20181001182959&amp;.html" class="mw-file-description"><img src="../File/Manipulator_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Manipulator_Workbench.html" title="Manipulator Workbench/pl">Manipulator</a>, <a rel="nofollow" class="external text" href="https://github.com/DeepSOIC/Part-o-magic">Part-o-magic</a> lub <span typeof="mw:File"><a href="../index.php?title=Workfeature_workbench_icon.svg&amp;filetimestamp=20200209045750&amp;.html" class="mw-file-description"><img src="../File/Workfeature_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Workfeature_Workbench.html" title="Workfeature Workbench/pl">WorkFeature</a>, aby u&#322;atwi&#263; sobie znajdowanie punkt&oacute;w przeci&#281;cia, pomiar odleg&#322;o&#347;ci oraz rozmieszczanie obiekt&oacute;w w &#380;&#261;dany spos&oacute;b.
+</p><p>Og&oacute;lnie rzecz bior&#261;c, obiekt <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Std_Part.html" title="Std Part/pl">Cz&#281;&#347;&#263;</a></span> zosta&#322; zaprojektowany tak, aby s&#322;u&#380;y&#322; jako podstawowy budulec do tworzenia z&#322;o&#380;e&#324;. Obiekt ten s&#322;u&#380;y do grupowania kilku <a href="../pl/Body.html" title="Body/pl">Zawarto&#347;ci</a> i przenoszenia ich razem jako jednostki, czyli jako podzespo&#322;u. Nast&#281;pnie ten podzesp&oacute;&#322; mo&#380;e by&#263; umieszczony obok lub u&#380;yty wewn&#261;trz innych podzespo&#322;&oacute;w, aby stworzy&#263; ostateczne z&#322;o&#380;enie.
 </p><p><span id="Constrained_assembly"></span>
 </p>
 <h3><span id="Z.C5.82o.C5.BCenie_z_wi.C4.99zami"></span><span class="mw-headline" id="Z&#322;o&#380;enie_z_wi&#281;zami">Z&#322;o&#380;enie z wi&#281;zami</span></h3>
@@ -108,13 +105,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114180901
+Cached time: 20260114181050
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.193 seconds
-Preprocessor visited node count: 117/1000000
+CPU time usage: 0.073 seconds
+Real time usage: 0.106 seconds
+Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 29479/2097152 bytes
 Template argument size: 11701/2097152 bytes
 Highest expansion depth: 5/100
@@ -124,17 +121,17 @@ Unstrip post&#8208;expand size: 1550/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.237      1 -total
- 41.12%    7.910      1 Template:Std_Base_navi/pl
- 18.80%    3.617      1 Template:Document_objects_navi/pl
- 16.17%    3.110      1 Template:Userdocnavi/pl
- 12.95%    2.492      3 Template:Navigation_menu_2
-  8.06%    1.550      1 Template:TOCright
-  7.22%    1.389      1 Template:Caption
-  6.18%    1.189      1 Template:Button
+100.00%   15.606      1 -total
+ 28.87%    4.505      1 Template:Document_objects_navi/pl
+ 28.68%    4.475      1 Template:Std_Base_navi/pl
+ 13.20%    2.060      1 Template:Userdocnavi/pl
+ 11.08%    1.730      3 Template:Navigation_menu_2
+ 10.59%    1.652      1 Template:TOCright
+  8.73%    1.363      1 Template:Caption
+  7.37%    1.151      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236747-0!canonical and timestamp 20260114180900 and revision id 1738480. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236747-0!canonical and timestamp 20260114181050 and revision id 1738482. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
